set up as tobya/umulmrumholiday for use on packagist until issue is merged.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "umulmrum/holiday",
+    "name": "tobya/umulmrumholiday",
     "description": "A PHP library to compute holidays. It's something :-)",
     "keywords": [
         "holiday",
